// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HardwareScalingForm Opens on details view: Details View 1`] = `
<WithStyles(ForwardRef(Dialog))
  open={true}
>
  <DetailsDialogBody
    details={
      Object {
        "gpu": Object {
          "count": "0",
          "cuda_version": "10.1",
          "driver_version": "418.87.01",
          "gpu": 0,
          "memory": 0,
          "name": null,
          "temperature": 0,
        },
        "instance": Object {
          "attributes": Object {
            "framework": "PyTorch:1.4",
            "title": "PyTorch/fastai/CUDA10.0",
            "version": "44",
          },
          "cpuPlatform": "Intel Broadwell",
          "id": 127546640929027970,
          "image": "projects/deeplearning-platform-release/global/images/pytorch-1-4-cu101-notebooks-20200302",
          "machineType": Object {
            "description": "4 vCPU, 15 GB RAM",
            "name": "n1-standard-4",
          },
          "name": "pytorch",
          "zone": "projects/123456/zones/us-west1-b",
        },
        "project": Object {
          "numericProjectId": 123456,
          "projectId": "test-project",
        },
        "utilization": Object {
          "cpu": 50,
          "memory": 16,
        },
      }
    }
    onDialogClose={[MockFunction]}
    onUpdate={[Function]}
    receivedError={false}
  />
</WithStyles(ForwardRef(Dialog))>
`;

exports[`HardwareScalingForm Shows confirmation view after form view: Confirmation View 1`] = `
<WithStyles(ForwardRef(Dialog))
  open={true}
>
  <ConfirmationPage
    currentConfiguration={
      Object {
        "attachGpu": false,
        "gpuCount": "0",
        "gpuType": "ACCELERATOR_TYPE_UNSPECIFIED",
        "machineType": Object {
          "description": "4 vCPU, 15 GB RAM",
          "name": "n1-standard-4",
        },
      }
    }
    formData={
      Object {
        "attachGpu": false,
        "gpuCount": "0",
        "gpuType": "ACCELERATOR_TYPE_UNSPECIFIED",
        "machineType": Object {
          "description": "4 vCPU, 15 GB RAM",
          "name": "n1-standard-4",
        },
      }
    }
    onDialogClose={[MockFunction]}
    onSubmit={[Function]}
  />
</WithStyles(ForwardRef(Dialog))>
`;

exports[`HardwareScalingForm Shows form view after details view: Form View 1`] = `
<WithStyles(ForwardRef(Dialog))
  open={true}
>
  <HardwareScalingForm
    acceleratorTypes={
      Array [
        Object {
          "description": "Nvidia Tesla K80",
          "maximumCardsPerInstance": 4,
          "name": "NVIDIA_TESLA_K80",
        },
        Object {
          "description": "Nvidia Tesla T4",
          "maximumCardsPerInstance": 8,
          "name": "NVIDIA_TESLA_T4",
        },
      ]
    }
    details={
      Object {
        "gpu": Object {
          "count": "0",
          "cuda_version": "10.1",
          "driver_version": "418.87.01",
          "gpu": 0,
          "memory": 0,
          "name": null,
          "temperature": 0,
        },
        "instance": Object {
          "attributes": Object {
            "framework": "PyTorch:1.4",
            "title": "PyTorch/fastai/CUDA10.0",
            "version": "44",
          },
          "cpuPlatform": "Intel Broadwell",
          "id": 127546640929027970,
          "image": "projects/deeplearning-platform-release/global/images/pytorch-1-4-cu101-notebooks-20200302",
          "machineType": Object {
            "description": "4 vCPU, 15 GB RAM",
            "name": "n1-standard-4",
          },
          "name": "pytorch",
          "zone": "projects/123456/zones/us-west1-b",
        },
        "project": Object {
          "numericProjectId": 123456,
          "projectId": "test-project",
        },
        "utilization": Object {
          "cpu": 50,
          "memory": 16,
        },
      }
    }
    machineTypes={
      Array [
        Object {
          "base": Object {
            "text": "N1 standard",
            "value": "n1-standard-",
          },
          "configurations": Array [
            Object {
              "text": "96 vCPUs, 360 GB RAM",
              "value": "n1-standard-96",
            },
          ],
        },
        Object {
          "base": Object {
            "text": "N1 ultramem",
            "value": "n1-ultramem-",
          },
          "configurations": Array [
            Object {
              "text": "40 vCPUs, 961 GB RAM",
              "value": "n1-ultramem-40",
            },
            Object {
              "text": "160 vCPUs, 3844 GB RAM",
              "value": "n1-ultramem-160",
            },
          ],
        },
        Object {
          "base": Object {
            "text": "Compute-optimized",
            "value": "c2-",
          },
          "configurations": Array [
            Object {
              "text": "Compute Optimized: 16 vCPUs, 64 GB RAM",
              "value": "c2-standard-16",
            },
          ],
        },
      ]
    }
    onDialogClose={[MockFunction]}
    onSubmit={[Function]}
    priceService={Object {}}
  />
</WithStyles(ForwardRef(Dialog))>
`;

exports[`HardwareScalingForm Shows status view after confirmation view: Status View 1`] = `
<WithStyles(ForwardRef(Dialog))
  open={true}
>
  <HardwareScalingStatus
    authTokenRetrieval={[Function]}
    hardwareConfiguration={
      Object {
        "attachGpu": false,
        "gpuCount": "0",
        "gpuType": "ACCELERATOR_TYPE_UNSPECIFIED",
        "machineType": Object {
          "description": "4 vCPU, 15 GB RAM",
          "name": "n1-standard-4",
        },
      }
    }
    hardwareService={
      Object {
        "getAcceleratorTypes": [MockFunction],
        "getMachineTypes": [MockFunction],
      }
    }
    notebookService={Object {}}
    onCompletion={[MockFunction]}
    onDialogClose={[MockFunction]}
  />
</WithStyles(ForwardRef(Dialog))>
`;
